--- a/Akcounts/Akcounts.NewUI/App.xaml
+++ b/Akcounts/Akcounts.NewUI/App.xaml
@@ -1,12 +1,12 @@
 ﻿<Application x:Class="Akcounts.NewUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Akcounts.NewUI">
+             xmlns:MainWindow="clr-namespace:Akcounts.NewUI.MainWindow">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary>
-                    <local:AkcountsBootstrapper x:Key="bootstrapper" />
+                    <MainWindow:AkcountsBootstrapper x:Key="bootstrapper" />
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
