--- a/Akcounts/Akcounts.NewUI/MainWindow/MainWindowView.xaml
+++ b/Akcounts/Akcounts.NewUI/MainWindow/MainWindowView.xaml
@@ -1,15 +1,46 @@
 ﻿<UserControl x:Class="Akcounts.NewUI.MainWindow.MainWindowView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d">
-    <StackPanel Margin="5">
-        <StackPanel Orientation="Horizontal">
-            <TextBlock Text="Name: "  Margin="3" Padding="4"/>
-            <TextBox x:Name="Name" Margin="3" Padding="4"/>
-        </StackPanel>
-        <TextBlock x:Name="HelloString" />
-        <Button x:Name="SayHello" Content="Click Me" />
-    </StackPanel>
+             xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
+             MinWidth="600"
+             MinHeight="400"
+             >
+    <Grid Background="Black">
+        <DockPanel Background="DarkOliveGreen" Margin="4">
+            <TextBlock DockPanel.Dock="Top"
+			           Foreground="White"
+                       Background="#FF4F8D52"
+			           Text="Akcounts"
+                       Padding="4"
+			           FontSize="28" FontWeight="Bold" />
+            
+            <ItemsControl x:Name="Items"
+                          DockPanel.Dock="Left"
+                          Background="DarkSeaGreen"
+                          VerticalAlignment="Stretch">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Button cal:Message.Attach="Show" Margin="2">
+                            <Grid Background="#FF7EAAA2">
+                                <StackPanel>
+                                    <Image Source="{Binding Icon}"
+									       Width="48"
+									       Height="48" />
+                                    <TextBlock Text="{Binding Label}"
+									           HorizontalAlignment="Center" />
+                                </StackPanel>
+                                <TextBlock VerticalAlignment="Top"
+								           HorizontalAlignment="Right"
+								           Margin="2"
+								           Text="{Binding Status}" />
+                            </Grid>
+                        </Button>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+
+            <ContentControl x:Name="ActiveItem" Margin="5" Background="ForestGreen"/>
+        </DockPanel>
+
+    </Grid>
 </UserControl>
