--- a/Akcounts/Akcounts.NewUI/MainWindow/MainWindowView.xaml
+++ b/Akcounts/Akcounts.NewUI/MainWindow/MainWindowView.xaml
@@ -32,7 +32,7 @@
                                 <TextBlock VerticalAlignment="Top"
 								           HorizontalAlignment="Right"
 								           Margin="2"
-								           Text="{Binding Status}" />
+								           Text="{Binding OpenChildren}" />
                             </Grid>
                         </Button>
                     </DataTemplate>
