--- a/Akcounts/Akcounts.NewUI/Accounts/AccountsWorkspace/Master.xaml
+++ b/Akcounts/Akcounts.NewUI/Accounts/AccountsWorkspace/Master.xaml
@@ -1,24 +1,43 @@
 ﻿<UserControl x:Class="Akcounts.NewUI.Accounts.AccountsWorkspace.Master"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro">
+             xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
+             xmlns:vw="clr-namespace:Akcounts.NewUI.Accounts">
     <Grid Margin="12">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
         <TextBlock FontSize="20"
-            Text="Account Maintenence" />
+            Text="Accounts" />
 
         <Button Grid.Row="0" Grid.Column="1"
                 x:Name="New"
 		        HorizontalAlignment="Right"
 		        Content="Add New Account"/>
+
+        <ScrollViewer Grid.Row="1" Grid.Column="0"
+                      VerticalScrollBarVisibility="Auto"
+                      HorizontalScrollBarVisibility="Disabled">
+            <ItemsControl x:Name="Accounts"
+                          VerticalAlignment="Stretch">
+                <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <vw:AccountSelectorView/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </ScrollViewer>
 
         <DockPanel Grid.Row="1" Grid.Column="1">
             <TextBlock Text="Open Accounts"
@@ -28,11 +47,7 @@
             <ItemsControl x:Name="Items">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <Button cal:Message.Attach="Edit($dataContext)">
-                                <TextBlock Text="{Binding DisplayName, Mode=TwoWay}" />
-                            </Button>
-                        </StackPanel>
+                        <vw:AccountSelectorView/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
