--- a/Akcounts/Akcounts.NewUI/Accounts/AccountsWorkspace/Master.xaml
+++ b/Akcounts/Akcounts.NewUI/Accounts/AccountsWorkspace/Master.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
              xmlns:vw="clr-namespace:Akcounts.NewUI.Accounts">
-    <Grid Margin="12">
+    <Grid Margin="12" Width="500">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
