--- a/Akcounts/Akcounts.NewUI/MainWindow/MainWindowView.xaml
+++ b/Akcounts/Akcounts.NewUI/MainWindow/MainWindowView.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
              MinWidth="600"
-             MinHeight="400"
-             >
+             MinHeight="400">
     <Grid Background="Black">
         <DockPanel Background="DarkOliveGreen" Margin="4">
             <TextBlock DockPanel.Dock="Top"
